@@ -237,7 +237,7 @@ typedef unsigned __int64 uint64_t;
 #define TURN_DEFAULT_NONCE_LIFETIME           180
 
 /* lifetime of a token (in seconds) */
-#define TURN_DEFAULT_TOKEN_LIFETIME           1800
+#define TURN_DEFAULT_TOKEN_LIFETIME           60
 
 /**
  * \struct turn_msg_hdr
